--- a/thesis.tex
+++ b/thesis.tex
@@ -1,8 +1,8 @@
 \documentclass[american,titlepage,oneside]{ntnuthesis}
 
-\title{A modeling environment in the cloud for
-education}
-\shorttitle{Cloud modeling environment}
+\title{A Modeling Environment in the Cloud for
+Education}
+\shorttitle{Cloud Modeling Environment}
 \author{Kristian Rekstad}
 \shortauthor{K. Rekstad}
 \date{\ntnuthesisdate}
