--- a/glossary.tex
+++ b/glossary.tex
@@ -4,32 +4,55 @@
 \makeglossaries % Prepare for adding glossary entries
 
 
-\newglossaryentry{latex}
+%\newglossaryentry{latex}
+%{
+%        name=latex,
+%        description={Is a mark up language specially suited for
+%scientific documents}
+%}
+
+%\newglossaryentry{bibliography}
+%{
+%        name=bibliography,
+%        plural=bibliographies,
+%        description={A list of the books referred to in a scholarly work,
+%typically printed as an appendix}
+%}
+
+\newglossaryentry{Theia}
 {
-        name=latex,
-        description={Is a mark up language specially suited for
-scientific documents}
+  name=Theia,
+  description={An \acrshort{IDE} for software development. Theia is accessible in a web browser and as a desktop application. The implementation reuses much of \gls{VSCode}'s internals. Managed by the Eclipse Foundation.}
 }
 
-\newglossaryentry{bibliography}
-{
-        name=bibliography,
-        plural=bibliographies,
-        description={A list of the books referred to in a scholarly work,
-typically printed as an appendix}
+\newglossaryentry{VSCode}{
+  name=VSCode,
+  description={An \acrshort{IDE} for software development. The full name is Visual Studio Code. Managed by Microsoft.}
 }
 
-\newglossaryentry{maths}
-{
-    name=mathematics,
-    description={Mathematics is what mathematicians do}
+\newglossaryentry{metamodel}{
+  name=metamodel,
+  description={In conceptual modeling, the model itself can be modeled. This model of the model is called a meta-model. \Gls{Ecore} is one example of a metamodel.}
 }
 
+\newglossaryentry{Ecore}{
+  name=Ecore,
+  description={The \acrshort{emf} core model. A \gls{metamodel} similar to UML Class Diagrams.}
+}
+
+\newglossaryentry{Eclipse}{
+  name={Eclipse IDE},
+  description={An \acrshort{IDE} by the Eclipse Foundation. Originally created by IBM. It is based on a plugin architecture using OSGi, and is written in Java.}
+}
 
 % --------------------
 % ----- Acronyms -----
 % --------------------
 
-\newacronym{phd}{PhD}{philosophiae doctor}
-\newacronym{CoPCSE}{CoPCSE@NTNU}{Community of Practice in Computer ScienceEducation at NTNU}
-\newacronym{gcd}{GCD}{Greatest Common Divisor}
+%\newacronym{phd}{PhD}{philosophiae doctor}
+%\newacronym{CoPCSE}{CoPCSE@NTNU}{Community of Practice in Computer ScienceEducation at NTNU}
+%\newacronym{gcd}{GCD}{Greatest Common Divisor}
+
+\newacronym{mdd}{MDD}{Model-Driven Development}
+\newacronym{IDE}{IDE}{Integrated Development Environment}
+\newacronym{emf}{EMF}{Eclipse Modeling Framework}
