fix: Improve compilation speed

--- a/thesis.tex
+++ b/thesis.tex
@@ -1,3 +1,9 @@
+% TODO: Remove before final
+\pdfcompresslevel=0
+\pdfobjcompresslevel=0
+\nonstopmode{}
+%
+
 \documentclass[american,titlepage,oneside]{ntnuthesis}
 \title{A Modeling Environment in the Cloud for
 Education}
