feat: Write proposal

--- a/glossary.tex
+++ b/glossary.tex
@@ -45,6 +45,16 @@
   description={An \acrshort{IDE} by the Eclipse Foundation. Originally created by IBM. It is based on a plugin architecture using OSGi, and is written in Java.}
 }
 
+\newglossaryentry{cloud}{
+  name={cloud},
+  description={Remote data centers that provide computing as a service. Commonly used by businesses to provide web infrastructure.}
+}
+
+\newglossaryentry{open source}{
+  name={open source},
+  description={The source code for a software is available; not just for inspection, but for re-use and modification.}
+}
+
 % --------------------
 % ----- Acronyms -----
 % --------------------
