--- a/glossary.tex
+++ b/glossary.tex
@@ -22,37 +22,52 @@
 \newglossaryentry{Theia}
 {
   name=Theia,
-  description={An \acrshort{IDE} for software development. Theia is accessible in a web browser and as a desktop application. The implementation reuses much of \gls{VSCode}'s internals. Managed by the Eclipse Foundation.}
+  description={An \acrshort{IDE} for software development. Theia is accessible in a web browser and as a desktop application. The implementation reuses much of \gls{VSCode}'s internals. Managed by the Eclipse Foundation}
 }
 
 \newglossaryentry{VSCode}{
   name=VSCode,
-  description={An \acrshort{IDE} for software development. The full name is Visual Studio Code. Managed by Microsoft.}
+  description={Visual Studio Code. An \acrshort{IDE} for software development. The full name is Visual Studio Code. Managed by Microsoft}
 }
 
 \newglossaryentry{metamodel}{
   name=metamodel,
-  description={In conceptual modeling, the model itself can be modeled. This model of the model is called a meta-model. \Gls{Ecore} is one example of a metamodel.}
+  description={In conceptual modeling, the model itself can be modeled. This model of the model is called a meta-model. \Gls{Ecore} is one example of a metamodel}
 }
 
 \newglossaryentry{Ecore}{
   name=Ecore,
-  description={The \acrshort{emf} core model. A \gls{metamodel} similar to UML Class Diagrams.}
+  description={The \acrshort{emf} core model. A \gls{metamodel} similar to UML Class Diagrams}
 }
 
 \newglossaryentry{Eclipse}{
   name={Eclipse IDE},
-  description={An \acrshort{IDE} by the Eclipse Foundation. Originally created by IBM. It is based on a plugin architecture using OSGi, and is written in Java.}
+  description={An \acrshort{IDE} by the Eclipse Foundation. Originally created by IBM. It is based on a plugin architecture using OSGi, and is written in Java}
 }
 
 \newglossaryentry{cloud}{
   name={cloud},
-  description={Remote data centers that provide computing as a service. Commonly used by businesses to provide web infrastructure.}
+  description={Remote data centers that provide computing as a service. Commonly used by businesses to provide web infrastructure}
 }
 
 \newglossaryentry{open source}{
   name={open source},
-  description={The source code for a software is available; not just for inspection, but for re-use and modification.}
+  description={The source code for a software is available; not just for inspection, but for re-use and modification}
+}
+
+\newglossaryentry{Gitpod}{
+  name=Gitpod,
+  description={A \gls{cloud} based workspace and \acrshort{IDE} for software development. It is based on \gls{Docker}, \gls{Kubernetes} and \gls{Theia}}
+}
+
+\newglossaryentry{Kubernetes}{
+  name=Kubernetes,
+  description={A container orchestration system created by Google}
+}
+
+\newglossaryentry{Docker}{
+  name=Docker,
+  description={A linux containerization system for process isolation and distribution. Popular for distributing and deploying self-contained software applications}
 }
 
 % --------------------
@@ -66,3 +81,4 @@
 \newacronym{mdd}{MDD}{Model-Driven Development}
 \newacronym{IDE}{IDE}{Integrated Development Environment}
 \newacronym{emf}{EMF}{Eclipse Modeling Framework}
+\newacronym{NTNU}{NTNU}{Norges Teknisk-naturvitenskapelige Universitet}
