fix: Glossary for API

--- a/glossary.tex
+++ b/glossary.tex
@@ -70,6 +70,13 @@
   description={A linux containerization system for process isolation and distribution. Popular for distributing and deploying self-contained software applications}
 }
 
+%\newglossaryentry{API}{
+%  name=API,
+%  description={Application Programming Interface (API). The interface which  another program needs to use. This can be protocols and message contents, or  programming language constructs like function definitions}
+%  long={Application Programming Interface},
+%  first={\glsentrylong{api}} (\glsentryname{api})
+%}
+
 % --------------------
 % ----- Acronyms -----
 % --------------------
@@ -82,3 +89,4 @@
 \newacronym{IDE}{IDE}{Integrated Development Environment}
 \newacronym{emf}{EMF}{Eclipse Modeling Framework}
 \newacronym{NTNU}{NTNU}{Norges Teknisk-naturvitenskapelige Universitet}
+\newacronym{API}{API}{Application Programming Interface}
