feat: Write mdse-tools

--- a/glossary.tex
+++ b/glossary.tex
@@ -70,6 +70,11 @@
   description={A linux containerization system for process isolation and distribution. Popular for distributing and deploying self-contained software applications}
 }
 
+\newglossaryentry{UML}{
+  name=UML,
+  description={Unified Modeling Language. A common modeling language for creating diagrams such as Class Diagrams. It is standardized by \acrlong{OMG}}
+}
+
 %\newglossaryentry{API}{
 %  name=API,
 %  description={Application Programming Interface (API). The interface which  another program needs to use. This can be protocols and message contents, or  programming language constructs like function definitions}
@@ -90,3 +95,11 @@
 \newacronym{emf}{EMF}{Eclipse Modeling Framework}
 \newacronym{NTNU}{NTNU}{Norges Teknisk-naturvitenskapelige Universitet}
 \newacronym{API}{API}{Application Programming Interface}
+
+\newacronym{EMOF}{EMOF}{Essential Meta Object Facility}
+\newacronym{OMG}{OMG}{Object Management Group}
+\newacronym{XMI}{XMI}{XML Metadata Interchange}
+
+\newacronym{RCP}{RCP}{Rich Client Platform}
+\newacronym{RAP}{RAP}{Remote Application Platform}
+\newacronym{GWT}{GWT}{Google Web Toolkit}
