--- a/thesis.tex
+++ b/thesis.tex
@@ -5,6 +5,9 @@
 %
 
 \documentclass[american,titlepage,oneside]{ntnuthesis}
+% Number subsubsections
+\setcounter{tocdepth}{3}
+\setcounter{secnumdepth}{3}
 
 % Research questions
 \newlist{questions}{enumerate}{2}
