feat: Write VSCode editor

--- a/glossary.tex
+++ b/glossary.tex
@@ -55,6 +55,11 @@
   description={The source code for a software is available; not just for inspection, but for re-use and modification}
 }
 
+\newglossaryentry{Che}{
+  name={Eclipse Che},
+  description={A \gls{cloud} based or self hosted workspace and \acrshort{IDE} for software development. It is based on \gls{Kubernetes} and \gls{Theia}}
+}
+
 \newglossaryentry{Gitpod}{
   name=Gitpod,
   description={A \gls{cloud} based workspace and \acrshort{IDE} for software development. It is based on \gls{Docker}, \gls{Kubernetes} and \gls{Theia}}
