feat: Write theia section

--- a/glossary.tex
+++ b/glossary.tex
@@ -80,6 +80,30 @@
   description={Unified Modeling Language. A common modeling language for creating diagrams such as Class Diagrams. It is standardized by \acrlong{OMG}}
 }
 
+\newglossaryentry{Electron}{
+  name={Electron},
+  description={A desktop application runtime for javascript, based on Chromium}
+}
+\newglossaryentry{Nodejs}{
+  name={NodeJS},
+  description={A javascript interpreter for desktop, based on the Chromium V8 javascript engine. It also includes some desktop \acrshortpl{API} like filesystem access}
+}
+
+\newglossaryentry{JSON-RPC}{
+  name={JSON-RPC},
+  description={Remote Procedure Call (RPC) protocol using Javascript Object Notation (JSON) serialization. It allows a process to execute functions in another process and obtain the results}
+}
+
+\newglossaryentry{REST}{
+  name=REST,
+  description={Represential State Transfer (REST). A paradigm for creating HTTP \acrshortpl{API}, centered around resources}
+}
+
+\newglossaryentry{WebSocket}{
+  name=WebSocket,
+  description={A two-way communication protocol over TCP sockets made available for web browsers. It allows for a persistent and reusable connection which can send multiple messages, unlike regular HTTP requests. Commonly used to avoid polling over HTTP, or live updates of a website}
+}
+
 %\newglossaryentry{API}{
 %  name=API,
 %  description={Application Programming Interface (API). The interface which  another program needs to use. This can be protocols and message contents, or  programming language constructs like function definitions}
@@ -108,3 +132,6 @@
 \newacronym{RCP}{RCP}{Rich Client Platform}
 \newacronym{RAP}{RAP}{Remote Application Platform}
 \newacronym{GWT}{GWT}{Google Web Toolkit}
+
+\newacronym{LSP}{LSP}{Language Server Protocol}
+\newacronym{GLSP}{GLSP}{Graphical Language Server Platform}
