--- a/thesis.tex
+++ b/thesis.tex
@@ -5,6 +5,8 @@
 %
 
 \documentclass[american,titlepage,oneside]{ntnuthesis}
+\usepackage{svg}
+
 % Number subsubsections
 \setcounter{tocdepth}{3}
 \setcounter{secnumdepth}{3}
