feat: Write extension mechanisms

--- a/glossary.tex
+++ b/glossary.tex
@@ -42,7 +42,7 @@
 
 \newglossaryentry{Eclipse}{
   name={Eclipse IDE},
-  description={An \acrshort{IDE} by the Eclipse Foundation. Originally created by IBM. It is based on a plugin architecture using OSGi, and is written in Java}
+  description={An \acrshort{IDE} by the Eclipse Foundation. Originally created by IBM. It is based on a plugin architecture using OSGi, and is written in Java. For more details, see \cref{sec:eclipse-ide}}
 }
 
 \newglossaryentry{cloud}{
@@ -92,6 +92,11 @@
 \newglossaryentry{JSON-RPC}{
   name={JSON-RPC},
   description={Remote Procedure Call (RPC) protocol using Javascript Object Notation (JSON) serialization. It allows a process to execute functions in another process and obtain the results}
+}
+
+\newglossaryentry{JSON}{
+  name={JSON},
+  description={Javascript Object Notation. A serialization format for object structures}
 }
 
 \newglossaryentry{REST}{
