feat: Write extension installation instructions

--- a/glossary.tex
+++ b/glossary.tex
@@ -109,6 +109,11 @@
   description={A two-way communication protocol over TCP sockets made available for web browsers. It allows for a persistent and reusable connection which can send multiple messages, unlike regular HTTP requests. Commonly used to avoid polling over HTTP, or live updates of a website}
 }
 
+\newglossaryentry{NPM}{
+  name={NPM},
+  description={Node Package Manager (NPM). Hosts javascript packages online. Similar to Maven Central, but for javascript}
+}
+
 %\newglossaryentry{API}{
 %  name=API,
 %  description={Application Programming Interface (API). The interface which  another program needs to use. This can be protocols and message contents, or  programming language constructs like function definitions}
