feat: Add sprotty

--- a/glossary.tex
+++ b/glossary.tex
@@ -114,6 +114,11 @@
   description={Node Package Manager (NPM). Hosts javascript packages online. Similar to Maven Central, but for javascript}
 }
 
+\newglossaryentry{ELK}{
+  name={Eclipse Layout Kernel},
+  description={Eclipse Layout Kernel (ELK) is a system for automatic diagram layout.~\cite{eclipsefoundationEclipseLayoutKernel} It positions nodes and edges for optimal viewing}
+}
+
 %\newglossaryentry{API}{
 %  name=API,
 %  description={Application Programming Interface (API). The interface which  another program needs to use. This can be protocols and message contents, or  programming language constructs like function definitions}
