feat: Write JSON-Forms and Theia Tree Editor

--- a/glossary.tex
+++ b/glossary.tex
@@ -119,6 +119,11 @@
   description={Eclipse Layout Kernel (ELK) is a system for automatic diagram layout.~\cite{eclipsefoundationEclipseLayoutKernel} It positions nodes and edges for optimal viewing}
 }
 
+\newglossaryentry{React}{
+  name=React,
+  description={A javascript framework by Facebook for rendering views in HTML}
+}
+
 %\newglossaryentry{API}{
 %  name=API,
 %  description={Application Programming Interface (API). The interface which  another program needs to use. This can be protocols and message contents, or  programming language constructs like function definitions}
