feat: Write JSON-RPC

--- a/glossary.tex
+++ b/glossary.tex
@@ -155,3 +155,4 @@
 
 \newacronym{LSP}{LSP}{Language Server Protocol}
 \newacronym{GLSP}{GLSP}{Graphical Language Server Platform}
+\newacronym{RPC}{RPC}{Remote Procedure Call}
