--- a/thesis.tex
+++ b/thesis.tex
@@ -13,8 +13,15 @@
 
 % Research questions
 \newlist{questions}{enumerate}{2}
-\setlist[questions,1]{label=\textbf{RQ\arabic*.},ref=RQ\arabic*,labelindent=\parindent,leftmargin=*,}
-\setlist[questions,2]{label=--- \textbf{\thequestionsi.\arabic*.},ref=\thequestionsi\arabic*,leftmargin=*}
+\setlist[questions,1]{label={\textbf{RQ\arabic*.}},ref={\arabic*},labelindent=\parindent,leftmargin=*,}
+\setlist[questions,2]{label=--- \textbf{\thequestionsi.\arabic*.},ref={\thequestionsi.\arabic*},leftmargin=*}
+
+\creflabelformat{questionsi}{#2\textup{#1}#3} % #2 and #3 are start and end of hyperlink.
+\crefname{questionsi}{RQ}{RQs} % singular and plural forms of text labels
+\Crefname{questionsi}{RQ}{RQs}
+\creflabelformat{questionsii}{#2\textup{#1}#3}
+\crefname{questionsii}{RQ}{RQs}
+\Crefname{questionsii}{RQ}{RQs}
 %
 
 \title{A Modeling Environment in the Cloud for
