feat: Write reviewed research questions. WIP

--- a/thesis.tex
+++ b/thesis.tex
@@ -5,7 +5,6 @@
 %
 
 \documentclass[american,titlepage,oneside]{ntnuthesis}
-\usepackage{svg}
 
 % Number subsubsections
 \setcounter{tocdepth}{3}
@@ -43,6 +42,7 @@ Education}
 \input{glossary.tex} % add glossary and acronym lists before document
 
 \begin{document}
+\setlength{\parindent}{15pt}
 
 \input{chapters/0a-abstract.tex}
 \input{chapters/0b-sammendrag.tex}
