docs: Add comments for feedback

--- a/research-questions/3-what-is-good.tex
+++ b/research-questions/3-what-is-good.tex
@@ -1,1 +1,3 @@
 What does a good \gls{cloud} based tool for \acrlong{mdd} look like?
+% "characteristics" or something, instead of look like?
+% TODO: write
