--- a/thesis.tex
+++ b/thesis.tex
@@ -1,7 +1,7 @@
 % TODO: Remove before final
-\pdfcompresslevel=0
-\pdfobjcompresslevel=0
-\nonstopmode{}
+%\pdfcompresslevel=0
+%\pdfobjcompresslevel=0
+%\nonstopmode{}
 %
 
 \documentclass[american,titlepage,oneside]{ntnuthesis}
