--- a/research-questions/3-what-is-good.tex
+++ b/research-questions/3-what-is-good.tex
@@ -1,3 +1,1 @@
-What does a good \gls{cloud} based tool for \acrlong{mdd} look like?
-% "characteristics" or something, instead of look like?
-% TODO: write
+What are the characteristics of a good \gls{cloud} based tool for \acrlong{mdd}?
