feat: Create structure for results

--- a/tables/1-functional-requirements.tex
+++ b/tables/1-functional-requirements.tex
@@ -2,8 +2,7 @@
 % \usepackage{longtable}
 % Note: It may be necessary to compile the document several times to get a multi-page table to line up properly
 \begin{longtable}{lll}
-\caption{Functional requirements for a master-detail Tree editor with property sheet.}
-\label{tab:function-requirements}\\
+\caption{Functional requirements for a master-detail Tree editor with property sheet.}\label{tab:function-requirements}\\
 \multicolumn{1}{c}{\textbf{ID}} & \multicolumn{1}{c}{\textbf{Requirement}}                                            & \multicolumn{1}{c}{\textbf{Description}}                                                                                                                                                                                                  \\ \hline
 \endfirsthead
 %
