--- a/glossary.tex
+++ b/glossary.tex
@@ -156,3 +156,5 @@
 \newacronym{LSP}{LSP}{Language Server Protocol}
 \newacronym{GLSP}{GLSP}{Graphical Language Server Platform}
 \newacronym{RPC}{RPC}{Remote Procedure Call}
+
+\newacronym{svg}{svg}{Scalable Vector Graphics}
