feat: Write prototype 1

--- a/thesis.tex
+++ b/thesis.tex
@@ -3,8 +3,9 @@
 %\pdfobjcompresslevel=0
 %\nonstopmode{}
 %
-
 \documentclass[american,titlepage,oneside]{ntnuthesis}
+
+\input{listings-settings.tex} % Define new programming languages
 
 % Number subsubsections
 \setcounter{tocdepth}{3}
@@ -75,5 +76,6 @@ Education}
 
 \appendix
 %\input{appendices/a-appendix.tex}
+\input{appendices/prototype-1-designdoc.tex}
 
 \end{document}
