feat: Write prototype 2 requirements. Add design doc

--- a/thesis.tex
+++ b/thesis.tex
@@ -77,5 +77,6 @@ Education}
 \appendix
 %\input{appendices/a-appendix.tex}
 \input{appendices/prototype-1-designdoc.tex}
+\input{appendices/prototype-2-designdoc.tex}
 
 \end{document}
