feat: Add DSL to glossary

--- a/glossary.tex
+++ b/glossary.tex
@@ -144,6 +144,7 @@
 \newacronym{emf}{EMF}{Eclipse Modeling Framework}
 \newacronym{NTNU}{NTNU}{Norges Teknisk-naturvitenskapelige Universitet}
 \newacronym{API}{API}{Application Programming Interface}
+\newacronym{DSL}{DSL}{Domain-specific language}
 
 \newacronym{EMOF}{EMOF}{Essential Meta Object Facility}
 \newacronym{OMG}{OMG}{Object Management Group}
