--- a/tables/1-functional-requirements.tex
+++ b/tables/1-functional-requirements.tex
@@ -1,19 +1,52 @@
 % Please add the following required packages to your document preamble:
 % \usepackage{longtable}
 % Note: It may be necessary to compile the document several times to get a multi-page table to line up properly
-\begin{longtable}{lll}
-\caption{Functional requirements for a master-detail Tree editor with property sheet.}\label{tab:function-requirements}\\
-\multicolumn{1}{c}{\textbf{ID}} & \multicolumn{1}{c}{\textbf{Requirement}}                                            & \multicolumn{1}{c}{\textbf{Description}}                                                                                                                                                                                                  \\ \hline
+\begin{longtable}{lp{3cm}p{6cm}}
+\caption{Functional requirements for a master-detail Tree editor with property sheet.}
+\label{tab:function-requirements}\\
+\multicolumn{1}{c}{\textbf{ID}} &
+  \multicolumn{1}{c}{\textbf{Requirement}} &
+  \multicolumn{1}{c}{\textbf{Description}} \\ \hline
 \endfirsthead
 %
 \multicolumn{3}{c}%
 {{\bfseries Table \thetable\ continued from previous page}} \\
-\multicolumn{1}{c}{\textbf{ID}} & \multicolumn{1}{c}{\textbf{Requirement}}                                            & \multicolumn{1}{c}{\textbf{Description}}                                                                                                                                                                                                  \\ \hline
+\multicolumn{1}{c}{\textbf{ID}} &
+  \multicolumn{1}{c}{\textbf{Requirement}} &
+  \multicolumn{1}{c}{\textbf{Description}} \\ \hline
 \endhead
 %
-FR1                             & Provide an interactive Tree Editor in VSCode and Theia (Gitpod)                     & \begin{tabular}[c]{@{}l@{}}The software must use an extension mechanism to provide a custom editor for trees.\\ A textual representation is not sufficient.\\ The tree comprises a hierarchy of nodes and their child nodes.\end{tabular} \\
-FR2                             & Provide an interactive Property sheet in VSCode and Theia (Gitpod)                  & \begin{tabular}[c]{@{}l@{}}The software must use an extension mechanism to provide a custom property sheet for tree nodes.\\ The property sheet needs to be synchronized with the selected node in the tree editor.\end{tabular}          \\
-FR3                             & The Tree must view nodes with labels and icons.                                     & \begin{tabular}[c]{@{}l@{}}Every node should have a default icon that depends on its node "type".\\ Every node should have a name that is read from the node data.\end{tabular}                                                           \\
-FR4                             & Tree nodes with children can toggle the visibility of children by user interaction. & \begin{tabular}[c]{@{}l@{}}An icon or symbol will show if a node has children.\\ If the user interacts with this icon, e.g. a click, all the children will toggle their visibility on/off.\end{tabular}                                   \\
-FR5                             & The Tree and Property views update automatically when the underlying model changes. &                                                                                                                                                                                                                                          
+FR1 &
+  Provide an interactive Tree Editor in VSCode and Theia (Gitpod) &
+  \begin{tabular}[c]{@{}p{6cm}@{}}The software must use an extension mechanism to provide a custom editor for trees.\\ A textual representation is not sufficient.\\ The tree comprises a hierarchy of nodes and their child nodes.\end{tabular} \\
+FR2 &
+  Provide an interactive Property sheet in VSCode and Theia (Gitpod) &
+  \begin{tabular}[c]{@{}p{6cm}@{}}The software must use an extension mechanism to provide a custom property sheet for tree nodes.\\ The property sheet needs to be synchronized with the selected node in the tree editor.\end{tabular} \\
+FR3 &
+  Provide an action bar with dynamically provided actions in VSCode and Theia (Gitpod). &
+  The action bar should have actions that are specified by a backend Tree Language Server. \\
+FR4 &
+  The Tree must view nodes with labels and icons. &
+  \begin{tabular}[c]{@{}p{6cm}@{}}Every node should have a default icon that depends on its node "type".\\ Every node should have a name that is read from the node data.\end{tabular} \\
+FR5 &
+  Tree nodes with children can toggle the visibility of children by user interaction. &
+  \begin{tabular}[c]{@{}p{6cm}@{}}An icon or symbol will show if a node has children.\\ If the user interacts with this icon, e.g. a click, all the children will toggle their visibility on/off.\end{tabular} \\
+FR6 &
+  The Tree and Property views update automatically when the underlying model changes. &
+  Subscribe to change notifications from the Model Server, in the Tree Language Server. \\
+FR7 &
+  The Action Bar updates when the tree selection changes. &
+  Show the available actions for the newly selected node. \\
+FR8 &
+  Support creation of new nodes. &
+   \\
+FR9 &
+  Support deletion of existing nodes. &
+   \\
+FR10 &
+  Support selecting a node. &
+   \\
+ &
+   &
+  
 \end{longtable}
