fix: Static date on frontpage

--- a/thesis.tex
+++ b/thesis.tex
@@ -25,7 +25,7 @@ Education}
 \author{Kristian Rekstad}
 \shortauthor{K. Rekstad}
 \date{\parbox{\linewidth}{\centering%
-  \today\endgraf\bigskip
+  {December~9,~2020}\endgraf\bigskip
   Specialization Project for Master's Thesis\endgraf\medskip
   Dept.\ of Computer Science \endgraf{}
   Norwegian University of Science and Technology}}
